# advent-of-code-2024

./: .gitignore  CMakeLists.txt  aoc.c  aoc.h  day1.c  day2.c  day3.c  day4.c  day5.c  day6.c  day7.c  hashmap.h  list.h  main.c  program.c
week1/: day5.c  day7.c
week2/: day10.c  day11.c  day12.c  day13.c  day14.c  day8.c  day9.c
week3/: day15.c  day16.c  day17.c  day18.c  day19.c  day20.c
week4/: day23.c  day24.c  day25.c
